[project]
name = "github-readme-csv-display"
version = "0.1.0"
description = ""
authors = [
    {name = "CagataySavasli",email = "cagatay.savasli@ozu.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
